[tool.poetry]
name = "elmax"
version = "0.1.0"
description = "Python client for the Elmax CLoud"

license = "Apache-2.0"
authors = ["Fabian Affolter <fabian@affolter-engineering.ch>"]
maintainers = []
readme = "README.md"

homepage = "https://github.com/home-assistant-ecosystem/python-elmax"
repository = "https://github.com/home-assistant-ecosystem/python-elmax"
documentation = "https://github.com/home-assistant-ecosystem/python-elmax"

keywords = ["iot", "cloud", "home-assistant"]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Home Automation"
]

[tool.poetry.dependencies]
python = "^3.8"
httpx = "^0.16.0"
yarl = "^1.6"

[tool.poetry.dev-dependencies]
pytest-cov = "^2.8.1"
black = "^20.8b1"
pytest = "^6"
sphinx = "^3"

[tool.poetry.scripts]
poetry-template = "elmax.cli:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
