[tool.poetry]
name = "elmax"
version = "0.1.5"
description = "Python client for the Elmax Cloud services"

license = "Apache-2.0"
authors = ["Fabian Affolter <fabian@affolter-engineering.ch>"]
maintainers = []
readme = "README.md"

homepage = "https://github.com/home-assistant-ecosystem/python-elmax"
repository = "https://github.com/home-assistant-ecosystem/python-elmax"
documentation = "https://github.com/home-assistant-ecosystem/python-elmax"

keywords = ["iot", "cloud", "home-assistant"]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Home Automation"
]

[tool.poetry.dependencies]
python = "^3.12"
httpx = ">=0.28,<1"
yarl = ">=1.7,<2"

[tool.poetry.dev-dependencies]
pytest-cov = "^2.8.1"
black = "^22.12"
pytest = "^6"
pytest-httpx = "^0.14"
pytest-asyncio = "^0.14"
sphinx = "^3"

[tool.poetry.scripts]
poetry-template = "elmax.cli:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
